# databricks_project

./: README.md
databricks_project/: pyproject.toml
databricks_project/notebooks/: AWS interactions.ipynb  Optimizations.ipynb  Parsing_invoices.ipynb  pandas_udf.ipynb  pipeline_notebook.ipynb
databricks_sample_package/udfs/: __init__.py
databricks_sandbox/: README.md  pyproject.toml
databricks_sandbox/notebooks/: pandas_udf.ipynb
databricks_sandbox/src/databricks_utils/: __init__.py
databricks_sandbox/src/databricks_utils/udfs/: functions.py
databricks_sandbox/tests/: test_functions.py
databricks_utils/: pyproject.toml
databricks_utils/src/databricks_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
databricks_utils/src/notebooks/: pandas_udf.ipynb
databricks_utils/tests/: test_functions.py
notebooks/: pandas_udf.ipynb
playground/tests/: test_functions.py
playground/udfs/: pandas_udf.ipynb
queries/: 01 - Top Ranked Baby Names by Year and Gender.dbquery.ipynb
tests/: test_functions.py
