[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks_utils"
version = "0.1.0"
description = "My Databricks Spark playground and utilities"
authors = [
    { name="Piotr Kuźmiak" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pyspark",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]